missing quotation mark in quote

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <p>
             "A fantastic addition to anyone's delivery toolbox. I love being
             able to tell when I've delivered to a customer before and how they
-            tipped so I can make better decisions. Very nice!
+            tipped so I can make better decisions. Very nice!"
           </p>
           <cite>-Totally A Real User</cite>
         </blockquote>
